--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>40</version>
   </parent>
 
-  <groupId>com.johanhaleby</groupId>
+  <groupId>se.haleby.aspectj</groupId>
   <artifactId>aspectj-maven-plugin</artifactId>
   <version>1.12.7-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
@@ -206,7 +206,7 @@
         <version>3.5</version>
         <configuration>
           <!-- see: https://github.com/apache/maven-plugin-tools/pull/11 -->
-          <mojoDependencies>com.johanhaleby:aspectj-maven-plugin</mojoDependencies>
+          <mojoDependencies>se.haleby.aspectj:aspectj-maven-plugin</mojoDependencies>
         </configuration>
       </plugin>
       <plugin>
@@ -295,7 +295,7 @@
         <version>3.5</version>
         <configuration>
           <!-- see: https://github.com/apache/maven-plugin-tools/pull/11 -->
-          <mojoDependencies>com.johanhaleby:aspectj-maven-plugin</mojoDependencies>
+          <mojoDependencies>se.haleby.aspectj:aspectj-maven-plugin</mojoDependencies>
         </configuration>
       </plugin>
       <plugin>
