--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <version>1.12.7-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
-  <name>Mojo's AspectJ Maven Plugin - NickWongDev Fork</name>
+  <name>Mojo's AspectJ Maven Plugin - Johan Haleby Fork</name>
   <description>
         Handles AspectJ usage within Maven.
         Functionality provided is: weaving of aspects (or existing aspects from libraries) with the
