--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>se.haleby.aspectj</groupId>
   <artifactId>aspectj-maven-plugin</artifactId>
-  <version>1.12.7</version>
+  <version>1.12.8-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Mojo's AspectJ Maven Plugin - Johan Haleby Fork</name>
@@ -42,7 +42,7 @@
     <connection>scm:git:https://github.com/johanhaleby/aspectj-maven-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/johanhaleby/aspectj-maven-plugin.git</developerConnection>
     <url>https://github.com/johanhaleby/aspectj-maven-plugin</url>
-    <tag>aspectj-maven-plugin-1.12.7</tag>
+    <tag>aspectj-maven-plugin-1.12.1</tag>
   </scm>
   <distributionManagement>
       <snapshotRepository>
