--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 jdk:
   - oraclejdk8
+  - openjdk14
 addons:
   apt:
     packages:
@@ -15,5 +16,6 @@ branches:
         - gh-pages
 notifications:
     email:
-        - lennartj@gmail.com
-        - david@davidkarlsen.com
+        - johan.haleby@gmail.com
+        - ning.n.zhang@ericsson.com
+        
