--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,10 @@
       <name>Johan Haleby</name>
       <timezone>Europe/Stockholm</timezone>
     </contributor>
+	<contributor>
+      <name>Ning Zhang</name>
+      <timezone>China/BeiJing</timezone>
+    </contributor>
   </contributors>
 
   <dependencies>
@@ -339,6 +343,21 @@
               </dependency>
           </dependencies>
       </profile>
+	  <profile>
+          <id>java9-tools</id>
+		  <activation>
+			<jdk>[1.9,]</jdk>
+		  </activation>
+		  <dependencies>
+			<dependency>
+			  <groupId>com.sun</groupId>
+			  <artifactId>tools</artifactId>
+			  <version>1.8</version>
+			  <scope>system</scope>
+			  <systemPath>${java.home}/lib/jrt-fs.jar</systemPath>
+			</dependency>
+		  </dependencies>		
+	  </profile>
       <profile>
           <id>java8</id>
           <activation>
