--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   </description>
   <inceptionYear>2018</inceptionYear>
   <properties>
-    <aspectjVersion>1.9.6</aspectjVersion>
+    <aspectjVersion>1.9.7</aspectjVersion>
     <mavenVersion>3.0.5</mavenVersion>
     <doxiaVersion>1.8</doxiaVersion>
     <mojo.java.target>1.8</mojo.java.target> <!-- aspectJ > 1.8.13 is JDK 1.8 minimum -->
@@ -344,15 +344,15 @@
           </dependencies>
       </profile>
 	  <profile>
-          <id>java9-tools</id>
+          <id>next-java-tools</id>
 		  <activation>
-			<jdk>[1.9,]</jdk>
+			<jdk>[1.9,)</jdk>
 		  </activation>
 		  <dependencies>
 			<dependency>
 			  <groupId>com.sun</groupId>
 			  <artifactId>tools</artifactId>
-			  <version>1.8</version>
+			  <version>1.9</version>
 			  <scope>system</scope>
 			  <systemPath>${java.home}/lib/jrt-fs.jar</systemPath>
 			</dependency>
